--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Xofi.GitHub.io by xofi</title>
+    <title>茶灰的博客</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Xofi.GitHub.io</h1>
+            <h1>欢迎来到茶飞的豪华公寓</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
