change intro of myself of index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>自我介绍</h3>
 
-<p>嗯，我呢，北邮在读博士，预计2018年春毕业. 最近在做城域网中的FEC算法研究。比如 <code>MatLab coding</code> 之类的. </p>
+<p>嗯，我呢，北邮在读博士，预计2018年春毕业. 最近在做城域网中的FEC算法研究，编程工具是 <code>MatLab coding</code> 之类的. </p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>成长经历</h3>
