some little changes of index.html

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>自我介绍</h3>
 
-<p>嗯，我呢，北邮在读博士，预计2018年春毕业. 最近在做城域网中的FEC算法研究，编程工具是 <code>MatLab coding</code> 之类的. </p>
+<p>嗯，我呢，是北邮在读博士，预计2018年春毕业。最近在做城域网中的FEC算法研究，编程工具是 <code>MatLab 2013b</code> 之类的。 </p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>成长经历</h3>
 
-<p>小学从三年级开始，每学年一次的三好学生。初中拿过一次年级第一。高中稳定班级前十。大学本科前三年都是三等奖学金，大四是二等。参加过60周年祖国大阅兵。在老舍纪念馆当过志愿者。研究生当过支部书记。博士当班长。</p>
+<p>幼儿园小班跳级大班。小学从三年级开始，每学年一次的三好学生。初中拿过一次年级第一。高中稳定班级前三。大学本科前三年都是三等奖学金，大四是二等。参加过60周年祖国大阅兵。在老舍纪念馆当过志愿者。研究生当过支部书记。博士当班长。</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>爱好</h3>
 
-<p>最爱的还是游戏。从单机到网游。从模拟器到游戏机。从红警、刀剑封魔录、文明、热血三国，到剑侠情缘3。这些年，玩过的游戏真不少。</p>
+<p>最爱的还是游戏：从单机到网游，从模拟器到游戏机，从红警、刀剑封魔录、文明、热血三国，到怪物猎人，灵魂献祭，pso，再到剑侠情缘3。这些年，玩过的游戏真不少。</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>讨厌的人</h3>
 
-<p>偷奸耍滑，欺软怕硬，满嘴跑火车的人。如果你发现了这种人，请赶紧 (<a href="https://github.com/xofi" class="user-mention">@xofi</a>) 咱们一起去打爆他</p>
+<p>偷奸耍滑，欺软怕硬，满嘴跑火车的人。如果你发现了这种人，请赶紧 (<a href="https://github.com/xofi" class="user-mention">@xofi</a>) ，咱们一起去打爆他</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>联系我</h3>
