add music and icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
     <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="stylesheets/github-light.css">
-
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
@@ -84,7 +83,7 @@
       </footer>
 
     </div>
-
-    
+ <audio id="bgmMusic" src="./music/ohayo.mp3" preload="auto" type="audio/mp3" autoplay="" loop=""></audio>
+ <div class="mPower"><span id="on" title="点击暂停"></span><span id="off" title="点击播放"></span></div>  
   </body>
 </html>
