--- a/404.html
+++ b/404.html
@@ -1,8 +1,9 @@
 ---
-layout: page    
-header-img: "img/red.jpg"  
-description: "你来到了一片荒芜之地"
-permalink: 404.html  
+layout: page
+header-img: img/red.jpg
+description: 你来到了一片荒芜之地
+permalink: 404.html
+published: true
 ---
 
 <p>你来到这个页面，通常有两个原因</p>
@@ -61,4 +62,3 @@ permalink: 404.html
         V~~V                     
 一定是发生了什么可怕的事情....
     </pre>
-
